fixing visualizer image name

--- a/swarm-stack-1/example-voting-app-stack.yml
+++ b/swarm-stack-1/example-voting-app-stack.yml
@@ -74,7 +74,7 @@ services:
         constraints: [node.role == manager]
 
   visualizer:
-    image: dockersamples/visualizer
+    image: bretfisher/visualizer
     ports:
       - 8080:8080
     stop_grace_period: 1m30s
