--- a/compose-sample-1/compose-3.yml
+++ b/compose-sample-1/compose-3.yml
@@ -26,6 +26,7 @@ services:
       - MYSQL_PROXY_USER=proxyuser
       - MYSQL_PROXY_PASSWORD=s3cret
   mysql-primary:
+    # image only works on x86_64 (amd64)
     image: percona/percona-xtradb-cluster:5.7
     environment: 
       - CLUSTER_NAME=mycluster
@@ -34,6 +35,7 @@ services:
       - MYSQL_PROXY_USER=proxyuser
       - MYSQL_PROXY_PASSWORD=s3cret
   mysql-secondary:
+    # image only works on x86_64 (amd64)
     image: percona/percona-xtradb-cluster:5.7
     environment: 
       - CLUSTER_NAME=mycluster
