--- a/compose-sample-1/compose-3.yml
+++ b/compose-sample-1/compose-3.yml
@@ -1,4 +1,6 @@
 version: '3'
+# NOTE: This example only works on x86_64 (amd64)
+# Percona doesn't yet publish arm64 (Apple Silicon M1) or arm/v7 (Raspberry Pi 32-bit) images
 
 services:
   ghost:
@@ -17,6 +19,7 @@ services:
       - mysql-primary
       - mysql-secondary
   proxysql:
+    # image only works on x86_64 (amd64)
     image: percona/proxysql
     environment: 
       - CLUSTER_NAME=mycluster
