--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -12,3 +12,5 @@ jobs:
     # use Reusable Workflows to call my linter config remotely
     # https://docs.github.com/en/actions/learn-github-actions/reusing-workflows
     uses: bretfisher/super-linter-workflow/.github/workflows/super-linter.yaml@main
+    with:
+      devops-only: true
