--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -14,3 +14,4 @@ jobs:
     uses: bretfisher/super-linter-workflow/.github/workflows/super-linter.yaml@main
     with:
       devops-only: true
+      filter-regex-exclude: .*compose-sample-3/html/.*
