--- a/dockerfile-assignment-1/Dockerfile
+++ b/dockerfile-assignment-1/Dockerfile
@@ -21,7 +21,7 @@
   #  It is common to still need to deploy old app versions, even years later.
 # - this app listens on port 3000, but the container should launch on port 80
   #  so it will respond to http://localhost:80 on your computer
-# - then it should use alpine package manager to install tini: 'apk add --update tini'
+# - then it should use alpine package manager to install tini: 'apk add --no-cache tini'
 # - then it should create directory /usr/src/app for app files with 'mkdir -p /usr/src/app'
 # - Node uses a "package manager", so it needs to copy in package.json file
 # - then it needs to run 'npm install' to install dependencies from that file
