--- a/swarm-secrets-assignment-1/docker-compose.yml
+++ b/swarm-secrets-assignment-1/docker-compose.yml
@@ -1,7 +1,6 @@
-# version isn't needed as of 2020 for docker compose CLI. 
-# All 2.x and 3.x features supported
-# version: '2'
-# NOTE: move this answer file up a directory so it'll work
+# This example file from a previous lecture where we ran drupal in docker compose
+# in this Assignment, change it to work with the default drupal image, and change
+# postgres to use a Swarm secret. More info in the README.md file.
 
 services:
 
