--- a/compose-sample-1/docker-compose.yml
+++ b/compose-sample-1/docker-compose.yml
@@ -3,7 +3,7 @@
 # version: '2'
 
 # same as 
-# docker run -p 80:4000 -v $(pwd):/site bretfisher/jekyll-serve
+# docker run --name jekyll -p 80:4000 -v $(pwd):/site bretfisher/jekyll-serve
 
 services:
   jekyll:
